--- a/apps/nuxtjs/assets/styles/components/button.scss
+++ b/apps/nuxtjs/assets/styles/components/button.scss
@@ -1,12 +1,13 @@
-@use "@fem-aec/tokens/dist/scss/mixins" as *;
-@use "@fem-aec/tokens/dist/scss/tokens" as *;
-@use "@/assets/styles/mixins" as *;
+@use '@fem-aec/tokens/dist/scss/mixins' as *;
+@use '@fem-aec/tokens/dist/scss/tokens' as *;
+@use '@/assets/styles/mixins' as *;
 
 .button {
   &__primary {
+    display: inline-block;
     padding: 1.5rem 3rem;
     text-transform: uppercase;
-    background-color: var(--fem-color-border-button-primary-rest);
+    background-color: var(--fem-color-background-button-primary-rest);
     color: var(--fem-color-text-button-primary-rest);
     box-shadow: inset 0 0 0 2px var(--fem-color-border-button-primary-rest);
 
@@ -24,16 +25,16 @@
 
   &__primary--inverse {
     &:is(:hover, :focus) {
-      box-shadow: inset 0 0 0 2px var(--fem-color-border-button-primary-inverse-focus);
+      box-shadow: inset 0 0 0 2px
+        var(--fem-color-border-button-primary-inverse-focus);
     }
   }
 
   &__secondary {
     padding: 1.5rem 3rem;
     text-transform: uppercase;
-    background-color: var(--fem-color-border-button-secondary-rest);
     color: var(--fem-color-text-button-secondary-rest);
-    box-shadow: inset 0 0 0 2px var(--fem-color-border-button-secondary-rest);
+    box-shadow: inset 0 0 0 1px var(--fem-color-border-button-secondary-rest);
 
     @extend %fem-text-button-secondary;
     @extend %color-animation;
@@ -44,15 +45,20 @@
 
     &:is(:hover, :focus) {
       background-color: var(--fem-color-background-button-secondary-active);
+      color: var(--fem-color-text-button-secondary-focus);
     }
   }
 
   &__secondary--inverse {
+    background-color: var(--fem-color-background-button-secondary-active);
+    color: var(--fem-color-text-button-secondary-focus);
+
     &:is(:hover, :focus) {
-      box-shadow: inset 0 0 0 2px var(--fem-color-border-button-secondary-inverse-focus);
+      background-color: var(
+        --fem-color-background-button-secondary-inverse-focus
+      );
     }
   }
-
 
   &__tertiary {
     background-color: var(--fem-color-background-button-tertiary-rest);
