--- a/apps/nuxtjs/assets/styles/components/footer.scss
+++ b/apps/nuxtjs/assets/styles/components/footer.scss
@@ -1,18 +1,16 @@
-@use "@fem-aec/tokens/dist/scss/mixins" as *;
-@use "@fem-aec/tokens/dist/scss/tokens" as *;
-@use "@/assets/styles/mixins" as *;
+@use '@fem-aec/tokens/dist/scss/mixins' as *;
+@use '@fem-aec/tokens/dist/scss/tokens' as *;
+@use '@/assets/styles/mixins' as *;
 
 .footer {
   display: grid;
   justify-items: center;
   gap: 48px;
-  margin-top: 120px;
   padding: 0 6.4% 38px;
   background-color: var(--fem-color-background-tertiary);
 
   @media screen and (min-width: 768px) {
     gap: 32px;
-    margin-top: 160px;
     padding: 0 5.2% 46px;
     justify-items: start;
   }
@@ -20,16 +18,6 @@
   @media screen and (min-width: 1440px) {
     grid-template-columns: 1fr 1fr;
     padding: 0 11.46% 48px;
-  }
-
-  &--margin {
-    @media screen and (min-width: 768px) {
-      margin-top: 96px;
-    }
-
-    @media screen and (min-width: 1440px) {
-      margin-top: 200px;
-    }
   }
 
   > * {
@@ -44,7 +32,7 @@
 
   &::before {
     display: block;
-    content: "";
+    content: '';
     width: 101px;
     height: 4px;
     background-color: var(--fem-color-fill-icon-primary-active);
@@ -75,7 +63,6 @@
       }
     }
   }
-
 
   &__body,
   &__bottom {
