--- a/apps/nuxtjs/assets/styles/_global.scss
+++ b/apps/nuxtjs/assets/styles/_global.scss
@@ -1,6 +1,8 @@
 @use '@fem-aec/tokens/dist/scss/mixins' as *;
 @use '@fem-aec/tokens/dist/scss/tokens' as *;
 
+@use 'mixins' as *;
+
 body {
   background-color: var(--fem-color-background-primary);
   color: var(--fem-color-text-primary);
@@ -10,4 +12,18 @@ body {
 
 img {
   max-width: 100%;
+}
+
+main {
+  margin: auto;
+  padding: 0 2.4rem;
+
+  @include for-tablet-up {
+    padding: 0 4rem;
+  }
+
+  @include for-desktop-up {
+    max-width: 1110px;
+    padding: 0;
+  }
 }
