--- a/apps/nuxtjs/assets/styles/components/button.scss
+++ b/apps/nuxtjs/assets/styles/components/button.scss
@@ -4,12 +4,13 @@
 
 .button {
   &__primary {
+    background-color: var(--fem-color-background-button-primary-rest);
+    box-shadow: inset 0 0 0 2px var(--fem-color-border-button-primary-rest);
+    color: var(--fem-color-text-button-primary-rest);
     display: inline-block;
     padding: 1.5rem 3rem;
+    text-align: center;
     text-transform: uppercase;
-    background-color: var(--fem-color-background-button-primary-rest);
-    color: var(--fem-color-text-button-primary-rest);
-    box-shadow: inset 0 0 0 2px var(--fem-color-border-button-primary-rest);
 
     @extend %fem-text-button-primary;
     @extend %color-animation;
@@ -20,6 +21,7 @@
 
     &:is(:hover, :focus) {
       background-color: var(--fem-color-background-button-primary-active);
+      box-shadow: none;
     }
   }
 
@@ -74,6 +76,22 @@
 
     &:is(:hover, :focus) {
       color: var(--fem-color-text-button-tertiary-active);
+    }
+  }
+
+  &__go-back {
+    color: var(--fem-color-text-primary);
+    display: block;
+    font-size: 1.5rem;
+    line-height: 2.5rem;
+    margin-top: 16px;
+
+    @include for-tablet-up {
+      margin-top: 33px;
+    }
+
+    @include for-desktop-up {
+      margin-top: 80px;
     }
   }
 }
