--- a/apps/nuxtjs/assets/styles/index.scss
+++ b/apps/nuxtjs/assets/styles/index.scss
@@ -1,16 +1,7 @@
-@use "@fem-aec/tokens/dist/css/colors.css";
-@use "resets";
-@use "global";
+@use '@fem-aec/tokens/dist/css/colors.css';
+@use 'resets';
+@use 'global';
 
-// The following uses would become in module imports
-@use "components/button";
-@use "components/link";
-@use "components/nav";
-@use "components/hero";
-@use "components/social";
-@use "components/header";
-@use "components/main";
-@use "components/categories";
-@use "components/feature";
-@use "components/overview";
-@use "components/footer";
+// shared elements
+@use 'components/button';
+@use 'components/link';
